force-app/main/default/objects/RTL_Referral_Assignment__c/RTL_Referral_Assignment__c.object-meta.xml
<CustomObject>
    <label>Referral Assignment</label>
    <nameField>
        <displayFormat>RTLRA-{000000}</displayFormat>
        <label>Referral Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Assignment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>