force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Active_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>