force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Assigned_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2.1 Assigned Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>