force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1.1 Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>