force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Assigned_User_field__c.field-meta.xml
<CustomField>
    <fullName>RTL_Assigned_User_field__c</fullName>
    <label>1.2 Assigned User field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTL_RM_Owner_Id__c</fullName>
            </value>
            <value>
                <fullName>RTL_Wealth_RM_Id__c</fullName>
            </value>
            <value>
                <fullName>RTL_Referred_By_ID__c</fullName>
            </value>
            <value>
                <fullName>RTL_Preferred_Staff__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>