force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Default_Branch_Zone_Queue_User_field__c.field-meta.xml
<CustomField>
    <fullName>RTL_Default_Branch_Zone_Queue_User_field__c</fullName>
    <description>CR to default to queue or user on branch and zone field (preferred branch on referral)</description>
    <label>3.4 Default Branch/Zone Queue/User field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>SE_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>Branch_Queue_Name__c</fullName>
            </value>
            <value>
                <fullName>RMC_User__c</fullName>
            </value>
            <value>
                <fullName>RTL_Wealth_RM_User__c</fullName>
            </value>
            <value>
                <fullName>RTL_Branch_Manager_User__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>