force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Default_For_BM__c.field-meta.xml
<CustomField>
    <fullName>RTL_Default_For_BM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3.3 Default Branch Queue of BM</label>
    <type>Checkbox</type>
</CustomField>