force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Default_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3.2 Default User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Assignment1</relationshipName>
    <type>Lookup</type>
</CustomField>