force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Integration_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Integration_Flag__c</fullName>
    <label>Integration Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>