force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Priority__c.field-meta.xml
<CustomField>
    <fullName>RTL_Priority__c</fullName>
    <label>Priority</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>