force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Reassign_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reassign_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify whether this rule is applied in Reassign process or not</description>
    <label>Reassign Flag</label>
    <type>Checkbox</type>
</CustomField>