force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Referral_Field_Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referral_Field_Criteria_2__c</fullName>
    <label>Referral Field Criteria 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTL_Preferred_Branch__c</fullName>
            </value>
            <value>
                <fullName>RTL_Is_BM__c</fullName>
            </value>
            <value>
                <fullName>RTL_Wealth_RM__c</fullName>
            </value>
            <value>
                <fullName>RTL_Account_Name__c</fullName>
            </value>
            <value>
                <fullName>RTL_Owner_Segment__c</fullName>
            </value>
            <value>
                <fullName>RTL_Owner_Zone__c</fullName>
            </value>
            <value>
                <fullName>RTL_Preferred_Branch_Name__c</fullName>
            </value>
            <value>
                <fullName>RTL_Segment__c</fullName>
            </value>
            <value>
                <fullName>RTL_Privilege__c</fullName>
            </value>
            <value>
                <fullName>RTL_Sales_Amount_Per_Year__c</fullName>
            </value>
            <value>
                <fullName>RTL_Interested_Product__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Name_txt__c</fullName>
            </value>
            <value>
                <fullName>RTL_EMP_BR_Code__c</fullName>
            </value>
            <value>
                <fullName>RTL_RM_Owner__c</fullName>
            </value>
            <value>
                <fullName>RTL_Owner_Role__c</fullName>
            </value>
            <value>
                <fullName>RTL_Type__c</fullName>
            </value>
            <value>
                <fullName>RTL_Phone1__c</fullName>
            </value>
            <value>
                <fullName>RTL_Channel_Segment__c</fullName>
            </value>
            <value>
                <fullName>RTL_Campaign_Reference__c</fullName>
            </value>
            <value>
                <fullName>RTL_Preferred_Branch_Type__c</fullName>
            </value>
            <value>
                <fullName>Is_Flagship__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Name__c</fullName>
            </value>
            <value>
                <fullName>RTL_Refer_Branch_Name__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Group__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Sub_Group__c</fullName>
            </value>
            <value>
                <fullName>RTL_Product_Name_Str__c</fullName>
            </value>
            <value>
                <fullName>Assigned_Pool__c</fullName>
            </value>
            <value>
                <fullName>FNA_Have_Loan_Product__c</fullName>
            </value>
            <value>
                <fullName>RTL_Purpose__c</fullName>
            </value>
            <value>
                <fullName>RTL_Wealth_RM_Id__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>