force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Referral_Field_Value_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referral_Field_Value_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Possible value for this field are 
1) Is null 
2) Is not null 
3) Field Value (always using &apos;=&apos; operator)
4) TRUE /FALSE for checkbox field</inlineHelpText>
    <label>Referral Field Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>