force-app/main/default/objects/RTL_Referral_Assignment__c/fields/RTL_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refer_to_Retail</fullName>
            </value>
            <value>
                <fullName>Retail_Cross_Channel_Referral</fullName>
            </value>
            <value>
                <fullName>Refer_to_Commercial</fullName>
            </value>
            <value>
                <fullName>Refer_within_Commercial</fullName>
            </value>
            <value>
                <fullName>Retail_Order_Transaction</fullName>
            </value>
            <value>
                <fullName>Refer_from_Digital_Channel</fullName>
            </value>
            <value>
                <fullName>Refer to Commercial</fullName>
                <isActive>false</isActive>
                <label>Refer to Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>