force-app/main/default/objects/RTL_Referral_Assignment__c/listViews/All_Active_Criteria.listView-meta.xml
<ListView>
    <fullName>All_Active_Criteria</fullName>
    <columns>NAME</columns>
    <columns>RTL_Referral_Type__c</columns>
    <columns>RTL_Priority__c</columns>
    <columns>RTL_Assigned_Queue_Name__c</columns>
    <columns>RTL_Default_Queue_Name__c</columns>
    <columns>RTL_Integration_Flag__c</columns>
    <columns>RTL_Referral_Field_Criteria_1__c</columns>
    <columns>RTL_Referral_Field_Value_1__c</columns>
    <columns>RTL_Referral_Field_Criteria_2__c</columns>
    <columns>RTL_Referral_Field_Value_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Active_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Criteria</label>
</ListView>