force-app/main/default/objects/RTL_Referral_Assignment__c/listViews/Retail_Order_Transaction.listView-meta.xml
<ListView>
    <fullName>Retail_Order_Transaction</fullName>
    <columns>NAME</columns>
    <columns>RTL_Priority__c</columns>
    <columns>RTL_Referral_Field_Criteria_1__c</columns>
    <columns>RTL_Referral_Field_Value_1__c</columns>
    <columns>RTL_Referral_Field_Criteria_2__c</columns>
    <columns>RTL_Referral_Field_Value_2__c</columns>
    <columns>RTL_Referral_Field_Criteria_3__c</columns>
    <columns>RTL_Referral_Field_Value_3__c</columns>
    <columns>RTL_Assigned_User__c</columns>
    <columns>RTL_Assigned_User_field__c</columns>
    <columns>RTL_Assigned_Queue_Name__c</columns>
    <columns>RTL_Branch_and_Zone_Queue_User_field__c</columns>
    <columns>RTL_Default_Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Referral_Type__c</field>
        <operation>equals</operation>
        <value>Retail_Order_Transaction</value>
    </filters>
    <filters>
        <field>RTL_Active_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Retail_Order_Transaction</label>
    <language>en_US</language>
</ListView>