force-app/main/default/objects/RTL_Referral_Assignment__c/listViews/Retail_Refer_from_Digital_Channel.listView-meta.xml
<ListView>
    <fullName>Retail_Refer_from_Digital_Channel</fullName>
    <columns>NAME</columns>
    <columns>RTL_Priority__c</columns>
    <columns>RTL_Referral_Type__c</columns>
    <columns>RTL_Active_Flag__c</columns>
    <columns>RTL_Reassign_Flag__c</columns>
    <columns>RTL_Assigned_User__c</columns>
    <columns>RTL_Assigned_Queue_Name__c</columns>
    <columns>RTL_Branch_and_Zone_Queue_User_field__c</columns>
    <columns>RTL_Default_Queue_Name__c</columns>
    <columns>RTL_Campaign__c</columns>
    <columns>RTL_Integration_Flag__c</columns>
    <columns>RTL_Referral_Field_Criteria_1__c</columns>
    <columns>RTL_Referral_Field_Criteria_2__c</columns>
    <columns>RTL_Referral_Field_Value_1__c</columns>
    <columns>RTL_Referral_Field_Value_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Referral_Type__c</field>
        <operation>equals</operation>
        <value>Refer_from_Digital_Channel</value>
    </filters>
    <filters>
        <field>RTL_Active_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Retail_Refer_from_Digital_Channel</label>
    <language>en_US</language>
</ListView>